--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Random Fox Gallery</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-  <body>
-    <fox-photo-gallery></fox-photo-gallery>
+<head>
+  <meta charset="UTF-8">
+  <title>Random Fox Gallery</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+  <fox-photo-gallery></fox-photo-gallery>
 
-    <script type="module" src="./src/fox-photo-gallery.js"></script>
-  </body>
+  <script type="module" src="./src/fox-photo-gallery.js"></script>
+</body>
 </html>
